--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap');
 
 :root {
-  --max-width: 1100px;
+  scroll-padding: 4rem;
+  scroll-behavior: smooth;
+
   --border-radius: 12px;
   --main-text-font: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
@@ -20,7 +22,7 @@
   --sub-color: 186,79,58;
   
   --f-bg-color: 9, 9, 9; 
-   --f-text-color: 244, 244, 244;
+  --f-text-color: 244, 244, 244;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -36,8 +38,6 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
   /* This is to maintain position: sticky; for descendant elements*/
   overflow: visible;
 }
